; PDF Generation

(rule
  (targets book.md)
  (deps ../book/toc.scm ../book/part-language-concepts.md ../book/part-tools-and-techniques.md ../book/part-the-compiler-and-runtime-system.md (alias ../book/latex))
  (action (run rwo-build build inputs -o . -repo-root ..)))

(copy_files ../book/EngD.cls)
(copy_files ../book/colour-blind.sty)

(rule
 (alias pdf)
 (targets book.tex)
 (deps ../bin/pandoc-rwo/pandoc_rwo.exe book.md EngD.cls colour-blind.sty ../book/book.yml ../book/cup-template.tex)
 (action
  (progn
   (system "pandoc -V links-as-notes=true --top-level-division=part --filter=../bin/pandoc-rwo/pandoc_rwo.exe --metadata-file=../book/book.yml --template ../book/cup-template.tex --listings -o book.tex -t latex -s book.md"))))

(rule
 (alias pdf)
 (targets book.pdf)
 (deps book.tex (alias site-content))
 (action
   (progn
     (system "xelatex book.tex")
     (system "makeindex book.idx")
     (system "xelatex book.tex")
     (system "xelatex book.tex")
  )))

; Website Generation

(alias
  (name site-content)
  (deps CNAME
        css/app.css
        css/prism.css
        images/anil.jpg
        images/bg.jpg
        images/book-cover.jpg
        images/cover.jpg
        images/cover-p1.jpg
        images/cover-p2.jpg
        images/cover-p3.jpg
        images/plain-bg.jpg
        images/yaron.jpg
        images/front-end/pipeline.png
        images/gc/minor_heap.png
        images/imperative-programming/edit_distance.png
        images/imperative-programming/edit_distance2.png
        images/lists-and-patterns/lists_layout.png
        images/memory-repr/block.png
        images/memory-repr/float_array_layout.png
        images/memory-repr/string_block.png
        images/memory-repr/string_size_calc.png
        images/memory-repr/tuple_layout.png
        js/_functions.js
        js/app.js
        js/jquery.min.js
        js/modernizr.js
        js/prism.js
        js/min/app-min.js
        js/min/modernizr-min.js
        theme/pdf/pdf.css))

(rule
 (alias site)
 (targets faqs.html)
 (deps (alias ../book/html) ../book/faqs.html)
 (action (run rwo-build build faqs -o . -repo-root ..)))

(rule
 (alias site)
 (targets index.html)
 (deps (alias ../book/html) ../book/index.html ../book/toc.scm (alias site-content))
 (action (run rwo-build build index -o . -repo-root ..)))

(rule
 (alias site)
 (targets install.html)
 (deps (alias ../book/html) ../book/install.html)
 (action (run rwo-build build install -o . -repo-root ..)))

(rule
 (alias site)
 (targets toc.html)
 (deps (alias ../book/html) ../book/toc.html ../book/toc.scm)
 (action (run rwo-build build toc -o . -repo-root ..)))

(rule
 (deps ../book/toc.scm)
 (action
  (with-stdout-to dune.gen
   (run rwo-build rules web -repo-root ..))))

(rule
 (alias runtest)
 (action (diff dune.inc dune.gen)))

(alias
 (name site)
 (deps (alias runtest)))

(include dune.inc)
