(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  examples/multiple_inheritance_wrong.ml
  examples/shapes/shapes.ml
  examples/verbose_shapes.ml
  (source_tree examples/shapes))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
    --prelude=%{dep:prelude.ml}
    --output %{target}
    --direction=to-md
    %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
