(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package base)
  (package core)
  (package ppx_jane)
  examples/blow_up/blow_up.ml
  examples/exn_cost/exn_cost.ml
  examples/result.mli
  (source_tree examples/blow_up)
  (source_tree examples/exn_cost))
 (locks ../../global-lock)
 (action
   (run ocaml-mdx test
    --prelude=%{dep:prelude.ml}
    --output %{target}
    --direction=to-md
    %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
