(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  examples/query_handler_loader/query_handler.ml
  examples/query_handler_loader/query_handler_core.ml
  examples/query_handler_loader/query_handler_loader.ml
  (source_tree examples/query_handler_loader))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
