(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ctypes)
  (package ctypes-foreign)
  (package ppx_jane)
  examples/ctypes/ctypes.mli
  examples/ctypes/ctypes_impl.ml
  examples/ffi/datetime/datetime.ml
  examples/ffi/hello/hello.ml
  examples/ffi/ncurses/ncurses.ml
  examples/ffi/ncurses/ncurses.mli
  examples/ffi/qsort/qsort.ml
  examples/ffi/qsort/qsort.mli
  examples/ffi/return_frag.ml
  (source_tree examples/ffi/datetime)
  (source_tree examples/ffi/hello)
  (source_tree examples/ffi/ncurses)
  (source_tree examples/ffi/qsort))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
