(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  examples/compare_example.ml
  examples/extended_fqueue.ml
  examples/extended_fqueue.mli
  examples/foldable.ml
  examples/fqueue.ml
  examples/fqueue.mli
  examples/sexpable.ml)
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
