(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package async)
  (package core)
  (package core_bench)
  (package ppx_jane)
  examples/barrier_bench/barrier_bench.ml
  examples/finalizer/finalizer.ml
  (source_tree examples/barrier_bench)
  (source_tree examples/finalizer))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
