(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package base)
  (package ppx_jane)
  examples/recursion.ml
  examples/sum/sum.ml
  (source_tree examples/sum))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
