(rule
  (target dune.gen)
  (action
   (with-stdout-to %{target}
    (run ocaml-mdx rule --locks ../../global-lock --duniverse-mode --direction=to-ml %{dep:README.md}
                --prelude=%{dep:prelude.ml}
                --prelude=memo:%{dep:memo.ml}
                --prelude=fib:%{dep:fib.ml}
                --prelude=letrec:%{dep:letrec.ml}
                --prelude=value_restriction:%{dep:letrec.ml}))))

(alias
 (name   runtest)
 (deps   README.md)
 (action (diff dune.inc dune.gen)))

(include dune.inc)

(data_only_dirs examples)
