(rule
  (target dune.gen)
  (action
   (with-stdout-to %{target}
    (run ocaml-mdx rule --locks ../../global-lock --duniverse-mode --direction=to-ml %{dep:README.md}
                --root examples/json
                --prelude=%{dep:prelude.ml}))))

(alias
 (name   runtest)
 (deps   README.md)
 (action (diff dune.inc dune.gen)))

(include dune.inc)
