(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  (package yojson)
  examples/json/github_j_excerpt.mli
  examples/json/github_org_info/github_org_info.ml
  examples/json/list_excerpt.mli
  examples/json/parse_book/parse_book.ml
  examples/json/read_json/read_json.ml
  examples/json/yojson_basic.mli
  examples/json/yojson_basic_simple.mli
  examples/json/yojson_safe.mli
  (source_tree examples/json))
 (locks ../../global-lock)
 (action
   (run ocaml-mdx test
    --prelude=%{dep:prelude.ml}
    --output %{target}
    --direction=to-md
    %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
