(rule
  (target dune.gen)
  (action
   (with-stdout-to %{target}
    (run ocaml-mdx rule --locks ../../global-lock --duniverse-mode %{dep:README.md}
     --prelude=%{dep:prelude.ml}))))

(alias
 (name   runtest)
 (deps   README.md)
 (action (diff dune.inc dune.gen)))

(include dune.inc)

(data_only_dirs examples)
