(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  examples/freq-fast/counter.ml
  examples/freq-fast/counter.mli
  examples/map_vs_hash/map_vs_hash.ml
  examples/map_vs_hash2/map_vs_hash2.ml
  (source_tree examples/map_vs_hash)
  (source_tree examples/map_vs_hash2))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
