(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane))
 (locks ../../global-lock)
 (action
  (run ocaml-mdx test
   --prelude=%{dep:prelude.ml}
   --prelude=%{dep:subtyping.ml}
   --output %{target}
   --direction=to-md
   %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
