(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  examples/parsing-test/test.ml
  examples/parsing/json.ml
  examples/parsing/manual_token_type.ml
  examples/parsing/parsed_example.ml
  examples/parsing/prog.mli
  examples/parsing/tokens.ml
  (source_tree examples/parsing)
  (source_tree examples/parsing-test))
 (locks ../../global-lock)
 (action
   (run ocaml-mdx test
    --prelude=%{dep:prelude.ml}
    --output %{target}
    --direction=to-md
    %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))

(data_only_dirs examples)
