(rule
 (target README.md.corrected)
 (deps
  (package mdx)
  (package core)
  (package ppx_jane)
  (package re))
 (locks ../../global-lock)
 (action
   (run ocaml-mdx test
    --prelude=%{dep:prelude.ml}
    --output %{target}
    --direction=to-md
    %{dep:README.md})))

(alias
 (name runtest)
 (action (diff README.md README.md.corrected)))
